Upstream gcc 4.6.4